Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
Description
The PutAzureBlobStorage processor's ReadCallback returns and error code when the upload fails which causes a FILE_OPERATION_EXCEPTION to be thrown. This should only happen if we fail to read the flowfile data. In case of upload failure the error result should be stored and the flowfile shall be transferred to failure.