MINIFICPP-1625 Transfer to failure when Azure blob fails to upload